force-app/main/default/objects/Bus_Seat__c/Bus_Seat__c.object-meta.xml
<CustomObject>
    <label>Bus Seat</label>
    <nameField>
        <displayFormat>SEAT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>