force-app/main/default/objects/Bus_Seat__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <label>Fare</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>