force-app/main/default/objects/Bus_Seat__c/fields/Seat_Category__c.field-meta.xml
<CustomField>
    <fullName>Seat_Category__c</fullName>
    <label>Seat Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Berth</fullName>
            </value>
            <value>
                <fullName>Double Berth</fullName>
            </value>
            <value>
                <fullName>Seater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>