force-app/main/default/objects/Bus_Seat__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Number</label>
    <type>Text</type>
</CustomField>